Completando y mejorando redacción v2 | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos.md
@@ -5,16 +5,15 @@ La capa de enlace de datos utiliza los servicios de la capa física para enviar 
 3. Regular el flujo de datos para que los emisores rápidos no saturen a los receptores lentos.
 
 Para cumplir con estas metas, la capa de enlace de datos toma los paquetes que obtiene de la capa de red y los encapsula en ***tramas*** para transmitirlos. Cada trama contiene un encabezado, un campo de carga útil y un terminador o cola.
-Los distintos protocolos de la capa de enlace define el formato de las tramas intercambiadas entre los nodos situados en los extremos del enlace, así como las acciones que estos llevan a cabo cuando se envían y reciben las tramas.
-El servicio básico de cualquier capa de enlace es mover una trama desde un nodo hasta otro adyacente a través de un único enlace de comunicaciones, aunque los detalles del servicio proporcionado pueden variar de un protocolo de la capa de enlace a otro. Muchos de los servicios proporcionados por la capa de enlace presentan notables paralelismos con los servicios de la capa de transporte, no obstante no son lo mismo, ya que están construidos para fines diferentes.
+Los distintos protocolos que forman parte de la capa de enlace definen su propio formato de tramas, las cuales son intercambiadas entre los distintos nodos situados en los extremos del enlace. Cada protocolo define también las acciones que se deben llevar a cabo al momento del envío y recepción de tramas.
+El servicio básico de cualquier capa de enlace es mover una trama desde un nodo hasta otro adyacente a través de un único enlace de comunicaciones, aunque los detalles acerca de los servicios proporcionados pueden variar de un protocolo a otro. Muchos de los servicios brindados por la capa de enlace presentan notables paralelismos con los servicios de la capa de transporte, no obstante no son lo mismo, ya que están construidos para fines diferentes.
 
 >[!tldr] Implementación de la Capa de Enlace
->En su mayor parte, la capa de enlace se implementa en un adaptador de red, también denominado tarjeta de interfaz de red o simplemente placa de red. El corazón del adaptador de red es el controlador de la capa de enlace, que normalmente es un único chip de propósito especial que implementa muchos de los servicios de la capa de enlace.
+>En su mayor parte, la capa de enlace se implementa en los adaptadores de red, también denominado tarjeta de interfaz de red o simplemente placa de red. El corazón del adaptador de red es el controlador de la capa de enlace, que normalmente es un único chip de propósito especial que implementa muchos de los servicios de la capa de enlace.
 >
 >![[implementacion-enlace.png]]
 
 ## Delimitación de Tramas
-
 Para proveer servicio a la capa de red, la capa de enlace de datos debe utilizar los servicios proporcionados por la capa física, la cual se encarga de aceptar un flujo de bits puros y tratar de entregarlo al destino. Dividir este flujo de bits en tramas no es una tarea sencilla. Un buen diseño de tramas debe facilitar al receptor la identificación del inicio de las nuevas tramas, utilizando la menor cantidad posible del ancho de banda del canal. Para esta tarea existen cuatro métodos posibles:
 
 1. **Conteo de bytes**: Utiliza un campo en la cabecera de la trama para indicar el largo en bytes de cada trama. Cuando la capa de enlace de datos del nodo destino ve el conteo de bytes, sabe dónde finaliza cada trama. Este método tiene el percance de que este contador puede ser alterado por algún error de transmisión.
@@ -22,14 +21,12 @@ Para proveer servicio a la capa de red, la capa de enlace de datos debe utilizar
 3. **Bits bandera con relleno de bits**: Es muy similar al método anterior con la diferencia que se utiliza una cantidad de bits arbitraria como delimitador. Para evitar que dicho patrón de bits delimitador se confunda con los contenidos de la carga útil, el emisor al encontrar un patrón similar en la carga útil de la trama reemplaza automáticamente el siguiente bit por uno de escape. Es el receptor el que reemplaza esos bits de escape por sus valores originales.
 4. **Violaciones de codificación de la capa física**: Utiliza un rango de señales determinado a nivel de hardware para indicar el comienzo y final de la trama. Este método resulta muy práctico, dado que existen ciertas señales reservadas que se pueden encontrar el inicio y final de la trama de forma sencilla sin necesidad de rellenar los datos.
 
-Muchos protocolos de capa de enlace usan una combinación de estos métodos por seguridad. Por ejemplo un patrón común utilizado para Ethernet y 802.11 es hacer que una trama inicie con un patrón bien definido, conocido como ***preámbulo***, dicho patrón podría ser bastante largo de modo que el receptor se pueda preparar para un paquete entrante. El preámbulo va seguido de un campo de longitud en el encabezado, que se utiliza para localizar el final de la trama.
-
+Muchos protocolos de capa de enlace usan una combinación de estos métodos por seguridad. Por ejemplo un patrón común utilizado por Ethernet y las redes IEEE 802.11 es hacer que una trama inicie con un patrón bien definido, conocido como ***preámbulo***, dicho patrón podría ser bastante largo de modo que el receptor se pueda preparar para un paquete entrante. El preámbulo va seguido de un campo de longitud en el encabezado, que se utiliza para localizar el final de la trama.
 ## Servicios de Transmisión
-
 La capa de enlace de datos puede diseñarse para ofrecer varios servicios. Los servicios reales ofrecidos varían de un protocolo a otro, pero existen tres posibilidades razonables que normalmente se proporcionan las cuales son:
 
 1. **Servicio sin conexión ni confirmación de recepción**: El emisor envía tramas independientes al receptor sin que esta confirme la recepción, por lo que no se establece una conexión lógica de antemano. Si se pierde una trama debido al ruido en la línea, la capa de enlace de datos no realiza ningún intento por detectar la pérdida o recuperarse de ella. Esta clase de servicio es apropiada cuando la tasa de error del canal es muy baja, de modo que la recuperación se deja a las capas superiores.
-2. **Servicio sin conexión con confirmación de recepción**: El emisor envía tramas sin establecer una conexión lógica entre los nodos, pero el receptor confirma de manera individual la recepción de cada trama enviada. De esta manera, el emisor sabe si la trama llegó correctamente. Si no ha llegado en un intervalo especificado, se puede reenviar la trama nuevamente. Este servicio es útil en canales no confiables, como los de los sistemas inalámbricos.
+2. **Servicio sin conexión con confirmación de recepción**: El emisor envía tramas sin establecer una conexión lógica entre los nodos, pero el receptor confirma de manera individual la recepción de cada trama enviada. De esta manera, el emisor sabe si la trama llegó correctamente. Si no ha llegado en un intervalo especificado, se puede reenviar la trama nuevamente. Este servicio es útil en canales no confiables, como en el caso de los sistemas inalámbricos.
 3. **Servicio orientado a conexión con confirmación de recepción**: Tanto el emisor como el receptor establecen una conexión antes de comenzar a transmitir datos. Cada trama enviada a través de la conexión está numerada, y la capa de enlace de datos garantiza que cada trama enviada llegue a su destino. Garantizando de esta forma que cada trama se recibirá exactamente una vez y que todas las tramas se recibirán en el orden correcto.
 
 >[!tldr] Control de Errores
@@ -37,13 +34,13 @@ La capa de enlace de datos puede diseñarse para ofrecer varios servicios. Los s
 >Problemas relacionados con el hardware pueden causar la pérdida total o parcial de la trama de control, lo que haría que el emisor espere indefinidamente dicha trama. Para solucionar este problema, se introducen temporizadores en la capa de enlace. Estos temporizadores permiten al emisor esperar un tiempo determinado para recibir la confirmación de recepción. Si no se recibe la confirmación dentro del tiempo establecido, el emisor vuelve a enviar la misma trama.
 
 ### Control de Flujo
-
 Otro aspecto importante en el diseño de la capa de enlace de datos es qué hacer con un emisor que quiere transmitir tramas de manera sistemática y a mayor velocidad que aquella con que puede aceptarlos el receptor. Para hacer frente a esta problemática existen dos métodos distintos:
 
 - **Control de flujo basado en retroalimentación**: El receptor envía de regreso información al emisor para autorizarle que envíe más datos o por lo menos indicarle su estado.
 - **Control de flujo basado en tasa**: El protocolo de la capa de enlace posee un mecanismo integrado que limita la tasa a la que el emisor puede transmitir los datos, sin recurrir a la retroalimentación por parte del receptor.
 
-El protocolo de ventana deslizante es un mecanismo de control el flujo que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando así la eficiencia y la utilización del canal al máximo. Tanto el emisor como el receptor tienen una “ventana” que indica el número de tramas que se pueden transmitir sin confirmar. El emisor envía un número $w$ de tramas, cada una con un número de secuencia. El receptor recibe las tramas y envía ACKs para las tramas correctas. Al recibir un ACK, la ventana del emisor se desplaza, permitiendo enviar nuevas tramas. Tradicionalmente, los datos y tramas de control se enviaban por enlaces físicos separados, lo que era menos eficiente, pero con el uso de conexiones _full-duplex_ o _half-duplex_, las tramas se intercalan en el mismo enlace.
+El protocolo de ventana deslizante es un mecanismo de control el flujo que permite al emisor enviar múltiples tramas antes de necesitar una confirmación (ACK), aumentando así la eficiencia y la utilización del canal al máximo. 
+En este protocolo tanto el emisor como el receptor tienen una “ventana” que indica el número de tramas que se pueden transmitir sin confirmar. El emisor envía un número $w$ de tramas, cada una con un número de secuencia. El receptor recibe las tramas y envía ACKs para las tramas correctas. Al recibir un ACK, la ventana del emisor se desplaza, permitiendo enviar nuevas tramas.
 Para mejorar la eficiencia, en lugar de enviar una trama de control independiente tras recibir una de datos, el receptor espera a que la capa de red le pase el siguiente paquete de datos, y anexa la confirmación de recepción a esta trama mediante un campo del encabezado. Así, la confirmación viaja con la siguiente trama de datos, optimizando el uso del enlace y reduciendo las tramas de control enviadas. Esta técnica se conoce como ***superposición (piggybacking)***. Por supuesto, si uno de los nodos tiene que enviar una confirmación, pero no tiene datos para enviar, se enviará una trama de confirmación.
 
 >[!tldr] Envió de Tramas de Confirmación
@@ -63,40 +60,31 @@ Estos mecanismos se denominan genéricamente ***solicitud de repetición automá
 
 1. **ARQ con parada y espera**: El emisor transmite una única trama y espera la confirmación (ACK) antes de enviar otra. Si la confirmación se pierde, un temporizador obliga al emisor a retransmitir la trama para evitar una espera infinita.
 2. **ARQ con adelante-atrás N**: El emisor envía una serie de tramas numeradas secuencialmente hasta un valor máximo. Si no hay errores en ninguna de las tramas, el receptor confirma las tramas recibidas, en caso contrario, el receptor envía una confirmación negativa (REJ), para posteriormente descartando la trama errónea y todas las siguientes hasta recibir la trama correcta. Al recibir la confirmación negativa, el emisor debe retransmitir la trama errónea y todas las posteriores.
-3. **ARQ con rechazo selectivo**: El emisor solo se retransmite las tramas que reciben una confirmación negativa (SREJ) por parte del receptor o aquellas cuyo temporizador haya expirado.
+3. **ARQ con rechazo selectivo**: El emisor solo retransmite las tramas que reciben una confirmación negativa (SREJ) por parte del receptor o aquellas cuyo temporizador haya expirado.
 
 >[!tldr] Eficiencia del Rechazo Selectivo
 >El rechazo selectivo puede parecer más eficiente que la adelante-atrás-N, ya que minimiza las retransmisiones. Sin embargo, el receptor necesita memoria temporal suficiente para almacenar las tramas posteriores a una SREJ y lógica adicional para reinsertar la trama corregida. Asimismo, el transmisor requiere lógica más compleja para enviar tramas fuera de orden. Estas complicaciones hacen que el rechazo selectivo se use menos que adelante-atrás-N, aunque es común en enlaces satelitales debido al alto retardo de propagación.
 
-Existe una relación entre el método de corrección de errores y la cantidad de tramas que se pueden enviar antes de recibir una confirmación en un protocolo de ventana deslizante. En general, para el esquema de adelante-atrás-N, el tamaño máximo de la ventana es igual a $2^n - 1$. Enviar esta cantidad de tramas simultáneamente evita la colisión de los números de secuencia asignados a cada trama, lo que reduce la posibilidad de enviar tramas incorrectas. En contraste, el esquema de rechazo selectivo permite enviar hasta $2^{n-1}$ tramas simultáneamente. Esta cantidad es más limitada, puesto que se necesita mantener en memoria el resto de las tramas, lo que incrementa la probabilidad de colisiones de números de secuencia si se envían muchas tramas a la vez.
-
+Existe una relación entre los distintos métodos ARQ y la cantidad de tramas que se pueden enviar antes de recibir una confirmación en un protocolo de ventana deslizante. En general, para el esquema de adelante-atrás-N, el tamaño máximo de la ventana es igual a $2^n - 1$. Enviar esta cantidad de tramas simultáneamente evita la colisión de los números de secuencia asignados a cada trama, lo que reduce la posibilidad de enviar tramas incorrectas. En contraste, el esquema de rechazo selectivo permite enviar hasta $2^{n-1}$ tramas simultáneamente. Esta cantidad es más limitada, puesto que se necesita mantener en memoria el resto de las tramas, lo que incrementa la probabilidad de colisiones de números de secuencia si se envían muchas tramas a la vez.
 #### Técnicas para la Detección de Errores
-
 Las técnicas de detección de errores permiten al receptor detectar los errores que se han producido en los bits de las tramas. Aunque se utilicen bits de detección de errores, puede que sigan existiendo errores que no detectados. Por tanto, lo que intentaremos será elegir un esquema de detección de errores que haga que la probabilidad de que se produzcan estos casos sea pequeña. Cuanto más sofisticadas son las técnicas de detección de errores mayores son los recursos adicionales necesarios.
-
 ##### Comprobación de Paridad
-
-Utiliza un **bit de paridad** para detectar errores en el flujo de bits de las tramas. Este bit de paridad no es más que un bit adicional que el emisor pone al final de la carga útil de la trama, dependiendo del tipo de paridad elegida la cantidad de unos de la carga útil más este bit será par o impar.
+Utiliza un **bit de paridad** para detectar errores en el flujo de bits de las tramas. Este bit de paridad no es más que un bit adicional que el emisor pone al final de la carga útil de la trama. Dependiendo del tipo de paridad elegida la cantidad de unos de la carga útil más este bit será par o impar.
 Un problema con este esquema es que un solo bit de paridad puede detectar de manera confiable un único error de un solo bit en el bloque. Si el bloque está muy confuso debido a una ráfaga de errores larga, la probabilidad de detectar ese error es solo del 50%, lo cual no es aceptable.
 Es posible aumentar la probabilidad de detección de manera considerable si cada bloque a enviar se trata como una matriz rectangular de $n \times k$ bits. Ahora, si calculamos y enviamos un bit de paridad para cada fila, se detectarán de manera confiable errores de hasta $k$ bits siempre y cuando haya a lo mucho un error por fila. Esta técnica se puede mejorar aún más si se calculan los bits de paridad sobre los datos en un orden distinto al que se transmiten los bits de datos. A este proceso se le denomina intercalado.
 
 >[!tldr] Corrección de Errores hacia Adelante
->La capacidad del receptor para detectar y corregir errores a la vez se conoce con el nombre de ***corrección de errores hacia adelante (FEC)***. Estas técnicas se suelen utilizar comúnmente en los dispositivos de almacenamiento y reproducción de audio, como por ejemplo los CD de audio. En un entorno de red, las técnicas FEC también pueden emplearse por sí mismas o en conjunción con técnicas ARQ.
+>La capacidad del receptor para detectar y corregir errores a la vez se conoce con ***corrección de errores hacia adelante (FEC)***. Estas técnicas se suelen utilizar comúnmente en los dispositivos de almacenamiento y reproducción de audio, como por ejemplo los CD de audio. En un entorno de red, las técnicas FEC también pueden emplearse por sí mismas o en conjunción con técnicas ARQ.
 
 ##### Suma de Comprobación
-
-En las técnicas de suma de comprobación, los $d$ bits de datos se tratan como una secuencia de enteros de $k$ bits. El método más simple consiste en sumar estos enteros de $k$ bits y utilizar la suma resultante como bits de detección de errores. Un ejemplo de este método es la ***suma de comprobación de Internet***, el cual es utilizado por protocolos como TCP y UDP, con la diferencia que para calcular esta suma se utilizan otros cálculos adicionales. Este tipo de códigos se puede realizar solo sobre la carga útil, sobre la carga útil o solo sobre el encabezado. Protocolos como XTP calculan dos sumas de comprobación, una para la cabecera y otro para la carga útil.
+En las técnicas de suma de comprobación, los $d$ bits de datos se tratan como una secuencia de enteros de $k$ bits. El método más simple consiste en sumar estos enteros de $k$ bits y utilizar la suma resultante como bits de detección de errores. Un ejemplo de este método es la ***suma de comprobación de Internet***, el cual es utilizado por protocolos como TCP y UDP, con la diferencia que para calcular esta suma se utilizan otros cálculos adicionales. Este tipo de códigos se puede realizar solo sobre la carga útil, sobre la carga útil y el encabezado o solo sobre el encabezado. Protocolos como XTP calculan dos sumas de comprobación, una para la cabecera y otro para la carga útil.
 Este tipo de métodos son eficientes y simples, pero ofrece una protección débil en algunos casos, precisamente debido a que es una suma simple. Existe una mejora a este método el cual es la ***suma de comprobación de Fletcher*** que incluye un componente posicional, en donde se suma el producto de los datos y su posición con la suma acumulada. Este método ofrece una detección más poderosa de los cambios en la posición de los datos.
-
 ##### Comprobación de Redundancia Cíclica
-
-Una técnica detección de errores utilizada ampliamente en las redes de computadoras de hoy día está basada en los ***códigos de comprobación de redundancia cíclica (CRC)***.
+Una técnica detección de errores utilizada ampliamente en las redes actuales está basada en los ***códigos de comprobación de redundancia cíclica (CRC)***.
 Los códigos CRC operan de la siguiente manera. Considere una secuencia de datos $D$ con una longitud de $d$ bits, que el emisor quiere transmitir. Antes de la transmisión el emisor y el receptor acuerdan un patrón $G$ de $r + 1$ bits, conocido como **polinomio generador**. Para una determinada secuencia de datos $D$, el emisor seleccionará $r$ bits adicionales y se los añadirá a $D$, de modo que el patrón de $d + r$ bits resultante sea exactamente divisible por $G$ utilizando aritmética en módulo 2.
 Para realizar el proceso de comprobación de errores, el receptor divide los $d + r$ bits recibidos entre $G$. Si el resto es distinto de cero, el receptor sabrá que se ha producido error; en caso contrario, se aceptarán los datos como correctos. Cada uno de los estándares de CRC puede detectar ráfagas de errores inferiores a $r + 1$ bits. Además, en las condiciones adecuadas, una ráfaga de longitud superior a $r + 1$ bits será detectada con una probabilidad de $1 – \ 0.5^r$.
-
 #### Técnicas Para la Corrección de Errores
-
-Todas las técnicas de corrección de errores agregan cierta redundancia en las tramas enviadas, para que el receptor al detectar un error puede corregir este mismo en ese instante. Entre los códigos utilizados para la corrección de errores se encuentran los siguientes:
+Todas las técnicas de corrección de errores agregan cierta redundancia en las tramas enviadas de forma tal que el receptor al detectar un error puede corregirlo en ese mismo instante. Entre los códigos utilizados para la corrección de errores se encuentran los siguientes:
 
 1. **Códigos de Hamming**.
 2. **Códigos convolucionales binarios**.
@@ -104,14 +92,10 @@ Todas las técnicas de corrección de errores agregan cierta redundancia en las 
 4. **Códigos de verificación de paridad de baja densidad (LDPC)**.
 
 Cada uno de estos métodos tiene sus fortalezas y debilidades, y su elección depende de las necesidades específicas del sistema de comunicación y del tipo de errores esperados. Cabe aclarar que la retransmisión de tramas por parte del emisor sigue siendo un método factible en la mayoría de los casos.
-
 ## Protocolos de la Capa de Enlace
-
-Como veremos más adelante cada tipo de red tiene su propio protocolo y formato de trama, nosotros nos centraremos en estos momentos en explicar de la forma más resumida posible dos protocolos muy importantes, HDLC que es utilizado en muchos casos como punto de referencia para el desarrollo del resto de protocolos LAN. El segundo de estos protocolos es ARP utilizado principalmente para realizar la correspondencia entre direcciones IP y direcciones MAC.
-
+Como veremos más adelante los distintos tipos de redes tienen sus propios protocolos y formatos de trama, nos centraremos en estos momentos en explicar de la forma más resumida posible dos protocolos muy importantes. HDLC que es utilizado en muchos casos como punto de referencia para el desarrollo del resto de protocolos LAN. El segundo de estos protocolos es ARP encargado de realizar la correspondencia entre direcciones IP y direcciones físicas.
 ### High-Level Data Link Control (HDLC)
-
-El protocolo de control del enlace de datos más importante es HDLC. No solo porque es ampliamente utilizado, sino también porque es la base de otros protocolos de control del enlace, en los que se usan los mismos o similares formatos y los mismos procedimientos que los empleados en HDLC.
+Uno de los protocolos más relevantes de la capa de enlace de datos es HDLC. No solo porque fue ampliamente utilizado, sino también porque estableció las bases para el resto de protocolos, en los que se usan los mismos o similares formatos y los mismos procedimientos que los empleados en HDLC.
 Para satisfacer las demandas de diversas aplicaciones, HDLC define tres tipos de estaciones, dos configuraciones del enlace y tres modos de operación para la transferencia de los datos.
 
 - **Tipos de estaciones**:
@@ -128,14 +112,12 @@ Para satisfacer las demandas de diversas aplicaciones, HDLC define tres tipos de
 
 El modo de respuesta normal se usa en líneas que disponen de múltiples conexiones, en las que se conectan varios terminales a un computador central; el computador sondea cada una de las entradas correspondientes a los distintos terminales. También se usa a veces en enlaces punto a punto, principalmente si el enlace conecta un terminal u otros periféricos a un computador.
 El modo balanceado asíncrono es el más utilizado de los tres modos; puesto que no se precisa realizar sondeos, y la utilización de enlaces punto a punto *full-duplex* resulta más eficiente con este modo. El modo de respuesta asíncrono es el menos utilizado, empleandose en ciertas situaciones particulares en las que la estación secundaria necesita iniciar la transmisión.
-
 #### Estructura de Trama
-
-HDLC emplea transmisión síncrona. Todos los intercambios se realizan mediante tramas, siendo suficiente un único formato de trama para todos los tipos de intercambios de datos e información de control.
+HDLC emplea transmisión síncrona, donde todos los intercambios se realizan mediante tramas, siendo suficiente un único formato de trama para todos los tipos de intercambios de datos e información de control.
 
 ![[trama-hdlc.png]]
 
-Los campos de delimitación, de dirección y de control, que preceden al campo de información, se denominan cabecera. Los campos FCS y de delimitación, que están a continuación del campo de datos, se denominan cola.
+El campo delimitador, de dirección y de control que preceden al campo de información se denominan cabecera. Mientras que los campos FCS y de delimitación, que están a continuación del campo de datos, se denominan cola.
 
 >[!tldr] Control Mediante Tramas
 >En HDLC se definen tres tipos de tramas, cada una de ellas con un formato diferente para el campo de control. Estas tramas son las siguientes:
@@ -147,10 +129,9 @@ Los campos de delimitación, de dirección y de control, que preceden al campo d
 >El primero o los dos primeros bits del campo de control se utilizan para identificar el tipo de trama. Los bits restantes se organizan en subcampos.
 
 #### Funcionamiento de HDLC
-
 El funcionamiento de HDLC implica tres fases. En la fase de inicio cualquiera de las dos partes puede solicitar la transmisión de datos mediante la utilización de una de las seis órdenes previstas para fijar el modo. El uso de esta orden tiene tres objetivos primordiales:
 
-1. Avisa al otro extremo sobre la solicitud de la iniciación.
+1. Avisa al otro extremo sobre la solicitud de iniciación.
 2. Especifica cuál de los tres modos (NRM, ABM, ARM) se está solicitando.
 3. Indica si se van a utilizar números de secuencia de 3 o de 7 bits.
 
@@ -166,9 +147,7 @@ Una vez aceptada la solicitud de transmisión, se establece una conexión lógic
 > - **Trama SREJ**: Se usa para solicitar la retransmisión de una única trama, especifica el mecanismo de rechazo selectivo.
 
 La desconexión puede ser llevada acabo por cualquiera de las entidades, tanto por iniciativa propia o tras la petición realizada por capas superiores. HDLC lleva a cabo la desconexión mediante el envío de una ***trama DISC***. La entidad remota puede aceptar dicha desconexión mediante la devolución de una ***trama UA***, informando a la capa de red sobre la finalización de la conexión. Cualquier trama-I pendiente de confirmación puede perderse, en cuyo caso será responsabilidad de las capas superiores su recuperación.
-
 ### Address Resolution Protocol (ARP)
-
-Dado que existen tanto direcciones de la capa de red como direcciones de la capa de enlace, surge la necesidad de una traducción entre ellas. El protocolo de resolución de direcciones es el encargado de realizar estas traducciones. A grandes rasgos todos los adaptadores de red tendrán un módulo ARP que recibirá una dirección IP y devolverá la dirección MAC correspondiente a ese equipo.
+Dado que existen tanto direcciones IP como direcciones físicas, surge la necesidad de una traducción entre ellas. El protocolo de resolución de direcciones es el encargado de realizar estas traducciones. A grandes rasgos todos los adaptadores de red tendrán un módulo ARP que recibirá una dirección IP y devolverá la dirección MAC correspondiente a ese equipo.
 La forma en la que funciona realmente ARP es muy similar a DNS, con la diferencia de que ARP resuelve las correspondencias entre direcciones IP y MAC de nodos pertenecientes a una misma subred. Cada nodo en la subred tiene en su memoria una ***tabla ARP***, que contiene las correspondencias entre direcciones IP y MAC, al igual que el tiempo de vida de este registro en la tabla. No todos los nodos de la subred cuentan con una entrada para corresponder a cada dispositivo de la subred, puede que solo contenga algunas correspondencias o directamente ni una.
-En caso de no se pueda resolver la correspondencia a través de la tabla ARP, emisor construye un paquete especial denominado ***paquete ARP***, estos paquetes contiene varios campos, en los cuales se incluyen las direcciones MAC del emisor y la IP del receptor, este paquete se pasa al adaptador de red indicándole que el paquete será enviado a través de un broadcast MAC. El adaptador de red encapsula el paquete en una trama y lo envía los demás nodos de la subred. Los demás nodos reciben la trama, la desempaquetan y pasa el paquete al módulo ARP donde se verifica si la dirección IP de destino se corresponde con la de ese host, en caso de que esto sea así el nodo enviará una respuesta ARP con la información correspondiente de este modo, el emisor recibirá este mensaje actualizará su tabla ARP y podrá comenzar a enviar las tramas. En caso de la correspondencia no se pueda llevar a cabo, el paquete es descartado.
+En caso de no se pueda resolver la correspondencia a través de la tabla ARP, el emisor construye un paquete especial denominado ***paquete ARP***, estos paquetes contiene varios campos, en los cuales se incluyen las direcciones MAC del emisor y la IP del receptor, este paquete se pasa al adaptador de red indicándole que el paquete será enviado a través de un broadcast MAC. El adaptador de red encapsula el paquete en una trama y lo envía los demás nodos de la subred. Los demás nodos reciben la trama, la desempaquetan y pasa el paquete al módulo ARP donde se verifica si la dirección IP de destino se corresponde con la de ese host, en caso de que esto sea así el nodo enviará una respuesta ARP con la información correspondiente de este modo, el emisor recibirá este mensaje actualizará su tabla ARP y podrá comenzar a enviar las tramas. En caso de la correspondencia no se pueda llevar a cabo, el paquete es descartado.
