--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Estandares para las Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Estandares para las Redes de Area Local.md
@@ -1,6 +1,10 @@
 ## Estándar IEEE 802 para Redes de Área Local
 Los protocolos definidos específicamente para la transmisión en redes LAN y MAN tratan cuestiones relacionadas con la transmisión de bloques de datos a través de la red. Según OSI, los protocolos de capas de red y superiores son independientes de la arquitectura de red y son aplicables a cualquier tipo de red. Así pues, el estudio de protocolos LAN está relacionado con las capas inferiores del modelo OSI.
 El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de estándares LAN. Además, la capa física del modelo 802 incluye una especificación del medio de transmisión y de la topología. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
+
+>[!info] Redes de Contienda
+>Todas las redes de área local pueden ser consideradas ***redes de contienda***, puesto que los múltiples usuarios o dispositivos que forman parte de la misma compiten continuamente por acceso y uso de un recurso compartido, como lo puede ser el ancho de banda del médio de transmisión. Este tipo de redes pueden experimentar congestión y colisiones, lo que afecta el rendimiento y la eficiencia de la transmisión de datos.
+
 Por encima de la capa física se encuentran las funciones asociadas a los servicios ofrecidos a los usuarios LAN. Entre ellas se encuentran las siguientes:
 1. La transmisión y ensamblado de datos en tramas con campos de dirección y de detección de errores.
 2. La recepción, desensamblado de tramas, reconocimiento de dirección y detección de errores.
@@ -15,6 +19,7 @@ Estas funciones se asocian generalmente a la capa del enlace de datos, la cual d
 Los datos del nivel superior se pasan hacia abajo hasta llegar al nivel LLC, que añade una cabecera de información de control, posteriormente se lo pasa a la capa MAC que termina de añadir sus encabezados quedando lista la trama para ser transmitida.
 
 ![[formato-trama.png]]
+
 ### Capa de Control de Enlace Lógico (LLC)
 La capa de *control de enlace lógico* es similar en varios aspectos a otras capas de enlace de uso común, es decir, se encarga de la transmisión de tramas entre dos estaciones adyacentes. La principal diferencia es que esta capa presenta dos características no compartidas por la mayor parte de otros protocolos de control de enlace:
 
